deleted useless style

--- a/templates/argonauts/index.html.twig
+++ b/templates/argonauts/index.html.twig
@@ -12,7 +12,7 @@
 
 				<!-- Member list -->
 				<h2>Membres de l'équipage</h2>
-				<section class="member-list container w-50 h-auto">
+				<section class="member-list container w-50">
                 <div class="row mx-auto">
                 {% for argonaut in argonauts %}
 					<div class="member-item col-4 text-center">{{argonaut.name}}</div>
